INCLUDE(LintelCMakeUtil)

IF(LINTEL_LATEX_REBUILD_ENABLED AND BUILD_TECH_REPORT)
    LINTEL_LATEX(dataseries-tr)
    INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/dataseries-tr.pdf
            DESTINATION ${CMAKE_INSTALL_PREFIX}/share/doc/DataSeries)
ENDIF(LINTEL_LATEX_REBUILD_ENABLED AND BUILD_TECH_REPORT)
