#
#  (c) Copyright 2007, Hewlett-Packard Development Company, LP
#
#  See the file named COPYING for license details
#
# automake input file

perldir = $(datadir)/perl5
nobase_perl_DATA = \
	DataSeries/Crypt.pm \
	DataSeries/LSFcommon.pm \
	DataSeries/LSFPlots/AllCpu.pm \
	DataSeries/LSFPlots/Default.pm \
	DataSeries/LSFPlots/Productions.pm 



