#
# (c) Copyright 2008, Hewlett-Packard Development Company, LP
#
#  See the file named COPYING for license details
#
# cmake rules for the src/process directory

DATASERIES_PROGRAM(dsextentindex)
DATASERIES_PROGRAM(dsrepack)
DATASERIES_PROGRAM(dsstatgroupby)
DATASERIES_PROGRAM(ds2txt)
DATASERIES_PROGRAM(ds2ellardnfs)
DATASERIES_PROGRAM(ds2wcweb)
DATASERIES_PROGRAM(ellardanalysis)
DATASERIES_PROGRAM(ellardnfs2ds)
DATASERIES_PROGRAM(indexnfscommon)
DATASERIES_PROGRAM(pssimple2ds)
DATASERIES_PROGRAM(sort-cache-sim)
DATASERIES_PROGRAM(textindex)
DATASERIES_PROGRAM(wcweb2ds)
DATASERIES_PROGRAM(dsrecover)

# TODO: figure out DBI dependencies
LINTEL_INSTALL_CONFIG_PROGRAM(sql2ds)

IF(LINTEL_program-options_ENABLED)
    DATASERIES_PROGRAM(csv2ds)
    DATASERIES_PROGRAM(dsselect)
ENDIF(LINTEL_program-options_ENABLED)

IF(CRYPTO_ENABLED)
    DATASERIES_PROGRAM(iphost2ds)
    DATASERIES_PROGRAM(extract-cache-sim ../analysis/nfs/common.cpp ../analysis/nfs/MergeJoins.cpp)
ENDIF(CRYPTO_ENABLED)

IF(SRT_ENABLED)
    DATASERIES_PROGRAM(srt2ds)
    TARGET_LINK_LIBRARIES(srt2ds ${SRT_LIBRARIES})

    DATASERIES_PROGRAM(cmpsrtds)
    TARGET_LINK_LIBRARIES(cmpsrtds ${SRT_LIBRARIES})

    INSTALL(PROGRAMS dssrt2txt DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
ENDIF(SRT_ENABLED)

IF(PCRE_ENABLED AND CRYPTO_ENABLED)
    DATASERIES_PROGRAM(bacct2ds)
    TARGET_LINK_LIBRARIES(bacct2ds ${PCRE_LIBRARIES})
ENDIF(PCRE_ENABLED AND CRYPTO_ENABLED)

IF(PCAP_ENABLED AND CRYPTO_ENABLED AND BZIP2_ENABLED AND "${HOST_TYPE}" STREQUAL "Linux")
    DATASERIES_PROGRAM(nettrace2ds)
    TARGET_LINK_LIBRARIES(nettrace2ds ${PCAP_LIBRARIES})
ENDIF(PCAP_ENABLED AND CRYPTO_ENABLED AND BZIP2_ENABLED AND "${HOST_TYPE}" STREQUAL "Linux")
